--- a/webpack-ts-es/package.json
+++ b/webpack-ts-es/package.json
@@ -23,10 +23,14 @@
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-typescript": "^7.10.4",
+    "@commitlint/config-conventional": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "babel-loader": "^8.1.0",
+    "commitlint": "^9.1.0",
     "eslint": "^7.6.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^5.1.1"
