--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node ./algorithm/dynamicProgramming/cowReceivingGifts.ts",
+    "dev": "ts-node ./algorithm/dynamicProgramming/buyTickets.ts",
     "dev:compile": "tsc ./algorithm/dynamicProgramming/cowReceivingGifts.ts && node ./algorithm/dynamicProgramming/cowReceivingGifts.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^14.0.27",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   },
