--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node ./algorithm/dynamicProgramming/buyTickets.ts",
+    "dev": "ts-node ./interview/eventBus.ts",
     "dev:compile": "tsc ./algorithm/dynamicProgramming/cowReceivingGifts.ts && node ./algorithm/dynamicProgramming/cowReceivingGifts.js"
   },
   "author": "",
