--- a/webpack-ts-es/package.json
+++ b/webpack-ts-es/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./src --ext .js --ext .ts --ext .tsx --fix",
-    "dev": "webpack --env development"
+    "dev": "webpack --env development --watch",
+    "build": "cp src/index.d.ts dist && webpack --env production"
   },
   "husky": {
     "hooks": {
@@ -22,7 +23,11 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.11.1",
+    "@babel/plugin-transform-react-jsx": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
+    "@babel/runtime": "^7.11.2",
     "@commitlint/config-conventional": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
@@ -34,5 +39,8 @@
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^5.1.1"
+  },
+  "dependencies": {
+    "loadjs": "^4.2.0"
   }
 }
