--- a/webpack-ts-es/package.json
+++ b/webpack-ts-es/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-ts-es",
+  "name": "webpack_ts_es",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -41,6 +41,7 @@
     "webpack-merge": "^5.1.1"
   },
   "dependencies": {
+    "dom-chef": "^4.2.0",
     "loadjs": "^4.2.0"
   }
 }
