--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack && webpack-dev-server --hot"
+    "dev": "webpack && webpack-dev-server --hot",
+    "lint": "eslint ./src --ext .js --ext .ts --ext .tsx --fix"
   },
   "author": "",
   "license": "ISC",
@@ -24,12 +25,19 @@
     "@babel/preset-typescript": "^7.12.1",
     "@types/lodash": "^4.14.165",
     "@types/react": "^16.9.55",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^5.0.1",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "html-webpack-plugin": "^4.5.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
+    "prettier": "^2.1.2",
     "style-loader": "^2.0.0",
+    "typescript": "^4.0.5",
     "webpack": "^5.4.0",
     "webpack-cli": "3.3",
     "webpack-dev-server": "^3.11.0",
