--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-typescript": "^7.12.1",
     "@types/lodash": "^4.14.165",
     "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "babel-loader": "^8.1.0",
