--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack && webpack-dev-server --hot",
+    "build": "webpack",
     "lint": "eslint ./src --ext .js --ext .ts --ext .tsx --fix"
   },
   "author": "",
@@ -33,12 +34,14 @@
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "prettier": "^2.1.2",
     "style-loader": "^2.0.0",
     "typescript": "^4.0.5",
+    "url-loader": "^4.1.1",
     "webpack": "^5.4.0",
     "webpack-cli": "3.3",
     "webpack-dev-server": "^3.11.0",
