--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -40,7 +40,10 @@
     "html-webpack-plugin": "^4.5.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
+    "postcss-pxtorem": "^5.1.1",
     "prettier": "^2.1.2",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.0.5",
     "style-loader": "^2.0.0",
     "typescript": "^4.0.5",
     "url-loader": "^4.1.1",
