--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -38,8 +38,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
-    "less": "^3.12.2",
-    "less-loader": "^7.0.2",
+    "node-sass": "^5.0.0",
     "postcss-pxtorem": "^5.1.1",
     "prettier": "^2.1.2",
     "sass": "^1.29.0",
