--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -31,14 +31,18 @@
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
+    "autoprefixer": "^10.0.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^5.0.1",
+    "cssnano": "^4.1.10",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "node-sass": "^5.0.0",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^4.0.4",
     "postcss-pxtorem": "^5.1.1",
     "prettier": "^2.1.2",
     "sass": "^1.29.0",
