--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.20",
+    "mobx": "^6.0.4",
+    "mobx-react-lite": "^3.1.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
