--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -45,6 +45,7 @@
     "node-sass": "^5.0.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^4.0.4",
+    "postcss-px-to-viewport": "^1.1.1",
     "postcss-pxtorem": "^5.1.1",
     "prettier": "^2.1.2",
     "sass": "^1.29.0",
