--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -17,7 +17,8 @@
     "mobx-react-lite": "^3.1.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "xhr": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
