--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -4,5 +4,17 @@
   "description": "webpack",
   "main": "index.js",
   "author": "linhaoran",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "css-loader": "^5.0.1",
+    "less": "^3.13.0",
+    "less-loader": "^7.1.0",
+    "node-sass": "^5.0.0",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0"
+  },
+  "dependencies": {}
 }
