--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -6,6 +6,7 @@
   "author": "linhaoran",
   "license": "MIT",
   "devDependencies": {
+    "@webpack-cli/serve": "^1.1.0",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
@@ -18,7 +19,8 @@
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.10.0",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {}
 }
