--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -13,6 +13,7 @@
     "html-webpack-plugin": "^4.5.0",
     "less": "^3.13.0",
     "less-loader": "^7.1.0",
+    "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
