--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -15,6 +15,9 @@
     "less-loader": "^7.1.0",
     "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss-loader": "^4.1.0",
+    "postcss-preset-env": "^6.7.0",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
