--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -8,6 +8,10 @@
   "devDependencies": {
     "@webpack-cli/serve": "^1.1.0",
     "css-loader": "^5.0.1",
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.1",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
