--- a/webpack-ts-es/package.json
+++ b/webpack-ts-es/package.json
@@ -32,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "babel-loader": "^8.1.0",
+    "core-js": "^3.8.1",
     "commitlint": "^9.1.0",
     "eslint": "^7.6.0",
     "husky": "^4.2.5",
